[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-localhost = "2"
winapi = { version = "0.3", features = ["winbase", "winuser", "processthreadsapi", "handleapi", "shellapi"] }
windows = { version = "0.62.2", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",        
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",     
    "Win32_Foundation",             
] }
sysinfo = "0.29.10"
rayon = "1.10.0"
reqwest = { version = "0.11.18", features = ["blocking", "stream", "json"] }
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
